Added survival mode for the displays (recipes & hardness), hide the block hitbox for non-creative players, if survival mode is not enabled.

--- a/src/main/resources/assets/onlinedisplays/langs/en_us.lang
+++ b/src/main/resources/assets/onlinedisplays/langs/en_us.lang
@@ -17,3 +17,6 @@ gui.onlinedisplays.scale_x=Scale (X)
 gui.onlinedisplays.scale_y=Scale (Y)
 gui.onlinedisplays.url=Image URL
 gui.onlinedisplays.emissive=Toggle Emissive
+
+info.onlinedisplays.emissive.true=Emissive
+info.onlinedisplays.emissive.false=Non-Emissive
