[1.19.2] Use mixin for accessing item overrides for rendering (instead of forge's weird method); Close #1          Upgrade dwebp to 1.3.2 to fix 0-day with WebP;          WebP is now instructed to use multi-threading, if possible (thus making the decode process slightly faster);          Add more safe-guards to prevent editing of a display block if player has no permission to do so;

--- a/src/main/resources/assets/onlinedisplays/langs/en_us.lang
+++ b/src/main/resources/assets/onlinedisplays/langs/en_us.lang
@@ -20,3 +20,4 @@ gui.onlinedisplays.emissive=Toggle Emissive
 
 info.onlinedisplays.emissive.true=Emissive
 info.onlinedisplays.emissive.false=Non-Emissive
+info.onlinedisplays.no_access=You don't have access to modify this display.
